# pika_ros

./: .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/data_msgs/share/data_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/data_tools/include/: dataUtility.h
install/data_tools/lib/data_tools/: aloha_data_to_mcap.py  camera_point_cloud_filter.py  compress_camera.py  data_publish.py  data_refacctoring_tar.py  data_sync.py  data_to_hdf5.py  data_tools_dataCapture  data_tools_dataPublish  data_tools_dataSync  hdf5_to_mcap.py  mcap_to_aloha_data.py  record_mcap.py
install/data_tools/share/data_tools/: local_setup.dsv  local_setup.sh  (+6 more)
install/pika_locator/lib/: CMakeCache.txt  Makefile  api_example  cmake_install.cmake  sensors-readout  survive-buttons  survive-cli  survive-solver
scripts/: calibration.bash  camera_point_cloud_filter.py  capture_bundle.py  data_publish.py  data_sync.py  data_to_hdf5.py  gen.py  load_data_example.py  multi_camera_point_cloud_filter.py  multi_data_publish.py  multi_data_to_hdf5.py  setup.bash  setup_device(original).py  setup_device.py  setup_multi_gripper.bash  setup_multi_sensor.bash  setup_sensor_gripper.bash  start_gripper.bash  start_multi_gripper.bash  start_multi_sensor.bash  start_multi_sensor_whit_teleop.bash  start_sensor.bash  start_sensor_gripper.bash  start_single_sensor.bash  start_single_sensor_whit_teleop.bash
src/pika_gripper_description/: CMakeLists.txt  package.xml
src/pika_gripper_description/config/: pika_gripper_description.yaml
src/pika_gripper_description/launch/: display.launch  gazebo.launch
src/pika_gripper_description/urdf/: pika_gripper_description.csv  pika_gripper_description.urdf  piper_pika_gripper_description.urdf
src/pika_sensor_description/: CMakeLists.txt  package.xml
src/pika_sensor_description/config/: joint_names_pika_sensor_description.yaml
src/pika_sensor_description/launch/: display.launch  gazebo.launch
src/pika_sensor_description/urdf/: pika_sensor_description.csv  pika_sensor_description.urdf
src/realsense-ros/: README.md
src/sensor_tools/: CMakeLists.txt  README.md  package.xml
src/sensor_tools/launch/: open_fisheye.launch.py  open_helmet.launch.py  open_helmet_whit_tracker.launch.py  open_multi_gripper.launch  open_multi_gripper.launch.py  open_multi_sensor.launch  open_multi_sensor.launch.py  open_multi_sensor_helmet_whit_tracker.launch.py  open_multi_sensor_with_teleop.launch.py  open_sensor_gripper.launch  open_sensor_gripper.launch.py  open_single_gripper.launch  open_single_gripper.launch.py  open_single_sensor.launch.py  open_single_sensor_with_teleop.launch.py
src/sensor_tools/scripts/: setup_device.py  setup_multi_gripper.bash  setup_sensor_gripper.bash  single_transmit_topics.py  start_multi_gripper.bash  start_multi_sensor.bash  start_sensor_gripper.bash  usb_camera.py
src/sensor_tools/src/: marker_publish.cpp  serial_gripper_imu.cpp
(+279 files in other folders)
